--- a/features/org.scriptkitty.perlipse.feature/pom.xml
+++ b/features/org.scriptkitty.perlipse.feature/pom.xml
@@ -13,8 +13,47 @@
     <relativePath>../../build</relativePath>
   </parent>
  
-  <artifactId>org.scriptkitty.perlipse.feature</artifactId>
+  <artifactId>org.scriptkitty.perlipse</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho.extras</groupId>
+        <artifactId>tycho-source-feature-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <excludes>
+            <plugin id="org.scriptkitty.perlipse.product"/>
+            <!-- feature id="feature.nosource"/-->
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <id>source-feature</id>
+            <phase>package</phase>
+            <goals>
+              <goal>source-feature</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-p2-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <executions>
+          <execution>
+            <id>attach-p2-metadata</id>
+            <phase>package</phase>
+            <goals>
+              <goal>p2-metadata</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
