--- a/plugins/org.scriptkitty.perlipse/pom.xml
+++ b/plugins/org.scriptkitty.perlipse/pom.xml
@@ -13,7 +13,7 @@
     <relativePath>../../build</relativePath>
   </parent>
 
-  <artifactId>org.scriptkitty.perlipse</artifactId>
+  <artifactId>org.scriptkitty.perlipse.product</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 
