--- a/features/org.scriptkitty.perlipse.feature/pom.xml
+++ b/features/org.scriptkitty.perlipse.feature/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.scriptkitty</groupId>
     <artifactId>perlipse</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath>../../build</relativePath>
+    <relativePath>../..</relativePath>
   </parent>
  
   <artifactId>org.scriptkitty.perlipse</artifactId>
