--- a/plugins/org.scriptkitty.perlipse.core/build.properties
+++ b/plugins/org.scriptkitty.perlipse.core/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = bin/
+target.. = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
