--- a/plugins/org.scriptkitty.perlipse.debug.ui/build.properties
+++ b/plugins/org.scriptkitty.perlipse.debug.ui/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = bin/
+target.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
