--- a/pom.xml
+++ b/pom.xml
@@ -73,18 +73,18 @@
   <dependencies>
     <dependency>
       <groupId>org.scriptkitty</groupId>
-      <artifactId>perl-utils</artifactId>
+      <artifactId>org.scriptkitty.perl-utils</artifactId>
       <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.scriptkitty</groupId>
-      <artifactId>ppi4j</artifactId>
-      <version>1.2.0-SNAPSHOT</version>
+      <artifactId>org.scriptkitty.ppi4j</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.scriptkitty</groupId>
-      <artifactId>ppi4j-ast</artifactId>
-      <version>1.2.0-SNAPSHOT</version>
+      <artifactId>org.scriptkitty.ppi4j-ast</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -141,6 +141,7 @@
           </archive>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
